# seca

./: README.md  pyproject.toml
examples/: demo_analogy.py  demo_contradiction.py  demo_rule_evolution.py
seca/: __init__.py  agent.py
seca/cognitive/: __init__.py  analogy.py  reasoning.py  rules.py
seca/foundation/: __init__.py  llm.py  memory.py  tools.py
seca/metacognitive/: __init__.py  monitor.py  rule_evolver.py
skill/: SKILL.md
skill/references/: cognitive-loop.md  meta-rules.md
skill/scripts/: seca.py
skill/scripts/seca/: __init__.py  evolver.py  memory.py  rules.py
