[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "seca"
version = "0.1.0"
description = "SECA — Self-Evolving Cognitive Agent: an experimental framework for cognitive agents that modify their own reasoning rules."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "boto3>=1.34.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
]

[project.optional-dependencies.providers]
# Optional: only needed if using direct API instead of Bedrock
openai = ["openai>=1.12.0"]
anthropic = ["anthropic>=0.18.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.2",
]

[tool.setuptools.packages.find]
include = ["seca*"]

[tool.ruff]
line-length = 100
target-version = "py311"
